<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/title_1"
        android:textColor="@color/colorSecondary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:background="@drawable/circle_style"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title_2"
        android:textColor="@color/colorMain"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSelectBirthDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_style"
        android:elevation="10dp"
        android:gravity="center"
        android:shadowColor="@color/colorAbyss"
        android:shadowDx="10"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/button"
        android:textColor="@color/colorTextWhite"
        android:textSize="28sp" />


    <TextView
        android:id="@+id/text_selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/select_date"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_ageYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/years"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ageDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/days"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ageMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/minutes"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ageSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/seconds"
        android:textColor="@color/colorSecondary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/button_localisation"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:layout_marginVertical="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/russia" />

</LinearLayout>